# cfworker-calendar-event

./: .dev.vars.example  CONTRIBUTING.md  CONTRIBUTING_EN.md  Cargo.toml  README.md  README_EN.md  default.nix  flake.nix  rust-toolchain.toml  wrangler.toml
.github/workflows/: deploy.yml
src/: calendar.rs  cangrebot.rs  lib.rs
tests/: compare.rs  format.rs
