[package]
name = "daily-challenges"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.21"
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["wasm-bindgen"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
html2md = "0.2.14"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
